--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -222,15 +222,15 @@ jobs:
           echo "PATH Variable: $PATH"
           make ${{ env.args }}
 
-      - name: "💛 Upload Image"
-        uses: actions/upload-artifact@v3
-        env:
-          arch: ${{ steps.generate-args.outputs.ARCH }}
-        with:
-          name: Image-${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_NAME }}-${{ env.builddate }}
-          path: ${{ env.OUT_DIR }}/arch/${{ env.arch }}/boot/Image
-          if-no-files-found: ignore
-          retention-days: 7
+      #- name: "💛 Upload Image"
+      #  uses: actions/upload-artifact@v3
+      #  env:
+      #    arch: ${{ steps.generate-args.outputs.ARCH }}
+      #  with:
+      #    name: Image-${{ env.KERNEL_DEVICE }}-${{ env.KERNEL_NAME }}-${{ env.builddate }}
+      #    path: ${{ env.OUT_DIR }}/arch/${{ env.arch }}/boot/Image
+      #    if-no-files-found: ignore
+      #    retention-days: 7
 
       - name: "💙 Upload Image.gz"
         uses: actions/upload-artifact@v3
@@ -270,9 +270,6 @@ jobs:
         run: |
           ls -al
 
-          if [ -e "${{ env.OUT_DIR }}/arch/${{ env.arch }}/boot/Image" ]; then
-            cp -f ${{ env.OUT_DIR }}/arch/${{ env.arch }}/boot/Image ./AnyKernel3/
-          fi
           if [ -e "${{ env.OUT_DIR }}/arch/${{ env.arch }}/boot/Image.gz" ]; then
             cp -f ${{ env.OUT_DIR }}/arch/${{ env.arch }}/boot/Image.gz ./AnyKernel3/
           fi
