Added CI Auto Check and Build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,13 @@ env:
   OUT_DIR: "${{ github.workspace }}/out"
 
 on:
+  workflow_call:
+    inputs:
+      from_ci:
+        type: boolean
+        required: false
+        default: true
+
   workflow_dispatch:
 
 jobs:
