Fix Power Patches

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -260,6 +260,9 @@ jobs:
           if [ -d "./drivers/kernelsu" ]; then
             rm -rf "./drivers/kernelsu"
           fi
+          if [ -d "./SUSFS" ]; then
+            rm -rf "./SUSFS"
+          fi
 
           curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s main
 
