--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,11 +61,7 @@ jobs:
     steps:
       - name: "🟣 Set Kernel Variables"
         run: |
-          if [[ "$KNAME" == "Power" ]]; then
-            echo "KERNEL_NAME=Power" >> $GITHUB_ENV
-            echo "KERNEL_REPO=${{ matrix.repos.kernelSource.power.repo }}" >> $GITHUB_ENV
-            echo "KERNEL_BRANCH=${{ matrix.repos.kernelSource.power.branch }}" >> $GITHUB_ENV
-          elif [[ "$KNAME" == "PowerFork" ]]; then
+          if [[ "$KNAME" == "PowerFork" ]]; then
             echo "KERNEL_NAME=PowerFork" >> $GITHUB_ENV
             echo "KERNEL_REPO=${{ matrix.repos.kernelSource.powerfork.repo }}" >> $GITHUB_ENV
             echo "KERNEL_BRANCH=${{ matrix.repos.kernelSource.powerfork.branch }}" >> $GITHUB_ENV
@@ -230,23 +226,6 @@ jobs:
           echo "ARCH=$ARCH" >> $GITHUB_OUTPUT
           echo "args=$args" >> $GITHUB_OUTPUT
 
-      - name: "🌀 Power Kernel"
-        if: ${{ env.KNAME == 'Power' }}
-        run: |
-          if [ -d "./SUSFS" ]; then
-            rm -rf "./SUSFS"
-          fi
-
-          SUSFS_BRANCH=next-4.14
-
-          git clone --recursive -j $(nproc) --branch $SUSFS_BRANCH https://github.com/cvnertnc/susfs4ksu-begonia SUSFS
-
-          SUSFS_REF=$(git -C SUSFS rev-parse --short HEAD)
-          echo -e "SUSFS_REF=$SUSFS_REF" >> $GITHUB_OUTPUT
-          echo -e "SUSFS_BRANCH=$SUSFS_BRANCH" >> $GITHUB_OUTPUT
-
-          patch -p1 < SUSFS/kernel_patches/kernels/power/0001-fs-implement-namespace.patch
-
       - name: "😋 Integrate KernelSU Next"
         id: integrate-kernelsu-next
         working-directory: ${{ env.KERNEL_NAME }}
@@ -290,9 +269,7 @@ jobs:
           echo -e "SUSFS_REF=$SUSFS_REF" >> $GITHUB_OUTPUT
           echo -e "SUSFS_BRANCH=$SUSFS_BRANCH" >> $GITHUB_OUTPUT
 
-          if [[ "$KNAME" == "Power" ]]; then
-            patch -p1 < SUSFS/kernel_patches/kernels/power/0002-fs-implement-KernelSU.patch
-          elif [[ "$KNAME" == "Nova" ]]; then
+          if [[ "$KNAME" == "Nova" ]]; then
             patch -p1 < SUSFS/kernel_patches/kernels/nova/0001-fs-implement-KernelSU.patch
           elif [[ "$KNAME" != "PowerFork" ]]; then
             patch -p1 < SUSFS/kernel_patches/0001-fs-implement-KernelSU.patch
@@ -323,9 +300,7 @@ jobs:
 
           patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch
 
-          if [[ "$KNAME" == "Power" ]]; then
-            patch -p1 < SUSFS/kernel_patches/kernels/power/50_add_susfs_in_kernel-4.14.patch
-          elif [[ "$KNAME" == "Nova" ]]; then
+          if [[ "$KNAME" == "Nova" ]]; then
             patch -p1 < SUSFS/kernel_patches/kernels/nova/50_add_susfs_in_kernel-4.14.patch
           else
             patch -p1 < SUSFS/kernel_patches/50_add_susfs_in_kernel-4.14.patch
